logo readability fixed with shadow

--- a/src/css/MainMenu.css
+++ b/src/css/MainMenu.css
@@ -43,6 +43,7 @@ body {
     height: 120px;
 	width: 238px;
 }
+
 .logo {
     align-items:center;
     display:flex;
@@ -50,6 +51,10 @@ body {
     justify-content:center;
 	object-fit: fill;
     width: 230px;
+}
+.logo-shadowFilter {
+    -webkit-filter: drop-shadow(12px 12px 7px rgba(255, 255, 255, 0.8));
+    filter: drop-shadow(12px 12px 7px rgba(255, 255, 255, 0.8));
 }
 
 .btn-sidebar-toggle {
